--- a/rpg.html
+++ b/rpg.html
@@ -72,29 +72,29 @@
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+RPG+1" alt="Juego RPG 1" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202110/2000/YMUoJUYNX0xWk6eTKuZLr5Iw.jpg" alt="Juego RPG 1" />
           </div>
-          <h3>Juego RPG 1</h3>
-          <p>Descripción breve del juego 1.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Elden Ring</h3>
+          <p>Recorre las Tierras Intermedias, un nuevo mundo de fantasía ideado por Hidetaka Miyazaki, creador de la exitosa serie de videojuegos DARK SOULS, y por George R. R. Martin, autor de Canción de hielo y fuego.</p>
+          <p><em>(PS4)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+RPG+2" alt="Juego RPG 2" />
+            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000043147/684bd8b00abcbf6dd122727a27c01a337f667bef825f4f4662efad9854b72fd4" alt="Juego RPG 2" />
           </div>
-          <h3>Juego RPG 2</h3>
-          <p>Descripción breve del juego 2.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Persona 5 Royal</h3>
+          <p>Persona 5 es un juego de rol donde el jugador asume el papel de un estudiante de secundaria a lo largo de todo un año en el que asiste a la escuela secundaria en Tokio.</p>
+          <p><em>(PS4-PS5)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+RPG+3" alt="Juego RPG 3" />
+            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000001369/3a41386d4b0999365727a21cc5c13853cfc244abca39b689bb79a339601e48c3" alt="Juego RPG 3" />
           </div>
-          <h3>Juego RPG 3</h3>
-          <p>Descripción breve del juego 3.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>The Elder Scrolls V: Skyrim</h3>
+          <p>The Elder Scrolls V: Skyrim es un videojuego de rol de acción de mundo abierto desarrollado por Bethesda Game Studios y publicado por Bethesda Softworks..</p>
+          <p><em>(pc)</em></p>
         </div>
       </div>
     </main>
