--- a/accion2.html
+++ b/accion2.html
@@ -74,29 +74,29 @@
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Acción+1" alt="Juego Acción 1" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202405/2117/bd406f42e9352fdb398efcf21a4ffe575b2306ac40089d21.png" alt="Juego Acción 1" />
           </div>
-          <h3>Juego Acción 1</h3>
-          <p>Descripción breve del juego 1.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Black Myth: Wukong</h3>
+          <p>Encarnarás al Predestinado, que ha de embarcarse en un viaje repleto de peligros y maravillas para descubrir la verdad oculta acerca de una gloriosa leyenda del pasado.</p>
+          <p><em>(PS5)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Acción+2" alt="Juego Acción 2" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png" alt="Juego Acción 2" />
           </div>
-          <h3>Juego Acción 2</h3>
-          <p>Descripción breve del juego 2.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>The Witcher 3: Wild Hunt</h3>
+          <p>Eres Geralt de Rivia, cazador de monstruos. En un continente devastado por la guerra e infestado de criaturas, tu misión es encontrar a Ciri, la niña de la profecía, un arma viviente que puede alterar el mundo tal y como lo conocemos.</p>
+          <p><em>(PS4)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Acción+3" alt="Juego Acción 3" />
+            <img src="https://i.blogs.es/b109e9/cyberpunk2077-johnny-v-rgb_en/1366_2000.jpg" alt="Juego Acción 3" />
           </div>
-          <h3>Juego Acción 3</h3>
-          <p>Descripción breve del juego 3.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Cyberpunk 2077</h3>
+          <p>Cyberpunk 2077 es un RPG de aventura y acción de mundo abierto ambientado en el futuro sombrío de Night City, una peligrosa megalópolis obsesionada con el poder, el glamur y las incesantes modificaciones corporales.</p>
+          <p><em>(PC)</em></p>
         </div>
       </div>
     </main>
