--- a/deportes.html
+++ b/deportes.html
@@ -72,29 +72,29 @@
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Deportes+1" alt="Juego Deportes 1" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202408/0817/4248a0d1a669210e5caf5174eda176c7883be2c9089fa106.png" alt="Juego Deportes 1" />
           </div>
-          <h3>Juego Deportes 1</h3>
-          <p>Descripción breve del juego 1.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>EA SPORTS FC™ 24</h3>
+          <p>EA SPORTS FC™ 24 te da la bienvenida a The World's Game: la experiencia futbolística más fiel hasta la fecha con HyperMotionV, PlayStyles optimizado por Opta y el motor mejorado de Frostbite™.</p>
+          <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Deportes+2" alt="Juego Deportes 2" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202406/1813/48a01e34bf8d665453e34e33dee2b7afc00e6c80fce939a6.jpg" alt="Juego Deportes 2" />
           </div>
-          <h3>Juego Deportes 2</h3>
-          <p>Descripción breve del juego 2.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>EA SPORTS™ Madden NFL 25</h3>
+          <p>Golpea con todas tus fuerzas con FieldSENSE™ y BOOM Tech. Disfruta del modo en que el nuevo sistema de placajes dinámico y determinado por la física permite vivir colisiones realistas y nuevas animaciones en ambos lados del campo.</p>
+          <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Deportes+3" alt="Juego Deportes 3" />
+            <img src="https://i.ytimg.com/vi/5vwFZodh-2I/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAdRmXnsgU3NzquAK4xYvZ8XQuIpA" alt="Juego Deportes 3" />
           </div>
-          <h3>Juego Deportes 3</h3>
-          <p>Descripción breve del juego 3.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>MLB Rivals</h3>
+          <p>¡Competición contra los rivles en la Major League! ¡La siguiente generación del juego de MLB con una experiencia elevada! MLB RIVALS.</p>
+          <p><em>(PC)</em></p>
         </div>
       </div>
     </main>
