--- a/plataformas.html
+++ b/plataformas.html
@@ -72,29 +72,29 @@
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Plataformas+1" alt="Juego Plataformas 1" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202012/0815/0Xqi1LgRoEtJ5zlFprpd54Vu.png" alt="Juego Plataformas 1" />
           </div>
-          <h3>Juego Plataformas 1</h3>
-          <p>Descripción breve del juego 1.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>It Takes Two</h3>
+          <p>Embárcate en la aventura de tu vida en It Takes Two. Invita a un amigo a acompañarte gratis con el Pase de amigo* para colaborar en una gran variedad de desafíos deliciosamente rompedores.</p>
+          <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Plataformas+2" alt="Juego Plataformas 2" />
+            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000021688/f01ac33f78852331a7cc0c41561119b225bb8ac9e359179e912fb636bd07b05e" alt="Juego Plataformas 2" />
           </div>
-          <h3>Juego Plataformas 2</h3>
-          <p>Descripción breve del juego 2.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Little Nightmares II</h3>
+          <p>Little Nightmares II es un juego de aventura y suspense en el que eres Mono, un joven atrapado en un mundo distorsionado por una malvada transmisión. Junto a su nueva amiga Six, Mono se dispone a descubrir de dónde viene esa transmisión.</p>
+          <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Plataformas+3" alt="Juego Plataformas 3" />
+            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000034725/cf74916275780188fd850512efe6c678318d7317bf987599205d2a3fc76dbd79" alt="Juego Plataformas 3" />
           </div>
-          <h3>Juego Plataformas 3</h3>
-          <p>Descripción breve del juego 3.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Ori and the Will of the Wisps</h3>
+          <p>Comienza un nuevo viaje por un mundo enorme y exótico en el que encontrarás imponentes enemigos y puzles desafiantes en tu misión para desentrañar el destino de Ori.</p>
+          <p><em>(PC)</em></p>
         </div>
       </div>
     </main>
