--- a/shooters.html
+++ b/shooters.html
@@ -72,29 +72,29 @@
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Shooters+1" alt="Juego Shooters 1" />
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202210/2019/S8KTmZMvemfR8yfAqHvLpGIP.jpg" alt="Juego Shooters 1" />
           </div>
-          <h3>Juego Shooters 1</h3>
-          <p>Descripción breve del juego 1.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Tom Clancy's Rainbow Six® Siege</h3>
+          <p>Tom Clancy's Rainbow Six® Siege es un shooter táctico realista por equipos donde una cuidadosa planificación y ejecución son claves para la victoria.</p>
+          <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Shooters+2" alt="Juego Shooters 2" />
+            <img src="https://cdnx.jumpseller.com/deus-digital/image/45980982/thumb/719/719?1709174376" alt="Juego Shooters 2" />
           </div>
-          <h3>Juego Shooters 2</h3>
-          <p>Descripción breve del juego 2.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Hell Let Loose</h3>
+          <p>Únete a Hell Let Loose, un shooter bestial en primera persona ambientado en la II Guerra Mundial que incluye batallas épicas de 100 jugadores con infantería, tanques, artillería.</p>
+          <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://via.placeholder.com/280x160?text=Juego+Shooters+3" alt="Juego Shooters 3" />
+            <img src="https://image.api.playstation.com/cdn/UP0002/CUSA03004_00/nufowBu3MX1KYbiOAbp9tyligmboXqHl.png" alt="Juego Shooters 3" />
           </div>
-          <h3>Juego Shooters 3</h3>
-          <p>Descripción breve del juego 3.</p>
-          <p><em>(Plataforma)</em></p>
+          <h3>Call of Duty®: Black Ops III</h3>
+          <p>Call of Duty® Black Ops III: Zombies Chronicles Edition incluye el juego original completo y la expansión de contenido Zombies Chronicles..</p>
+          <p><em>(PC)</em></p>
         </div>
       </div>
     </main>
