signo de interrogacion a categoria accion

--- a/accion2.html
+++ b/accion2.html
@@ -69,7 +69,7 @@
       </section>
 
       <!-- Contenedor para tres juegos -->
-      <h2 class="categorias" style="text-align:center;">Acción</h2>
+      <h2 class="categorias" style="text-align:center;">Acción?</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
