se quitaron los estilos en los html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h3 class="category-title">Shooters</h3>
           </div>
         </a>
-        <a href="familiares.html" class="category-card">
+        <a href="plataformas.html" class="category-card">
           <div class="image-wrapper">
             <img
               src="https://www.latercera.com/resizer/v2/EDN6X2MW3JHFHNRVP6XDJVW5RE.jpg?quality=80&smart=true&auth=433f2ca3b8d703316f0b168608befb0bb2926bdf0b6ff33e2e7004f18896c2cf&width=690&height=502"
