--- a/accion.html
+++ b/accion.html
@@ -27,6 +27,7 @@
 
     <main class="main-content">
       <!-- Sección de descripción centrada -->
+      <h2 class="categorias">Acción</h2>
       <section class="category-description">
         <p>
           En la categoría <strong>Acción</strong> encontrarás juegos llenos de
@@ -36,7 +37,6 @@
       </section>
 
       <!-- Contenedor para tres juegos -->
-      <h2 class="categorias" style="text-align: center">Acción?</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
