--- a/deportes.html
+++ b/deportes.html
@@ -10,7 +10,10 @@
       <a href="index.html">
         <div class="logo">
           <h1>Checkpoint</h1>
-          <img src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png" alt="logo" />
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png"
+            alt="logo"
+          />
         </div>
       </a>
       <nav class="nav-menu">
@@ -23,40 +26,62 @@
     </header>
 
     <main class="main-content">
-      <!-- Descripción centrada para Deportes -->
+      <h2 class="categorias">Deportes</h2>
       <section class="category-description">
         <p>
-          En la categoría <strong>Deportes</strong> encontrarás juegos que te ponen en el centro de la acción deportiva, con simulaciones realistas y competencias intensas que harán vibrar tu espíritu competitivo.
+          En la categoría <strong>Deportes</strong> encontrarás juegos que te
+          ponen en el centro de la acción deportiva, con simulaciones realistas
+          y competencias intensas que harán vibrar tu espíritu competitivo.
         </p>
       </section>
 
-      <h2 class="categorias" style="text-align:center;">Deportes</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202408/0817/4248a0d1a669210e5caf5174eda176c7883be2c9089fa106.png" alt="Juego Deportes 1" />
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202408/0817/4248a0d1a669210e5caf5174eda176c7883be2c9089fa106.png"
+              alt="Juego Deportes 1"
+            />
           </div>
           <h3>EA SPORTS FC™ 24</h3>
-          <p>EA SPORTS FC™ 24 te da la bienvenida a The World's Game: la experiencia futbolística más fiel hasta la fecha con HyperMotionV, PlayStyles optimizado por Opta y el motor mejorado de Frostbite™.</p>
+          <p>
+            EA SPORTS FC™ 24 te da la bienvenida a The World's Game: la
+            experiencia futbolística más fiel hasta la fecha con HyperMotionV,
+            PlayStyles optimizado por Opta y el motor mejorado de Frostbite™.
+          </p>
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202406/1813/48a01e34bf8d665453e34e33dee2b7afc00e6c80fce939a6.jpg" alt="Juego Deportes 2" />
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202406/1813/48a01e34bf8d665453e34e33dee2b7afc00e6c80fce939a6.jpg"
+              alt="Juego Deportes 2"
+            />
           </div>
           <h3>EA SPORTS™ Madden NFL 25</h3>
-          <p>Golpea con todas tus fuerzas con FieldSENSE™ y BOOM Tech. Disfruta del modo en que el nuevo sistema de placajes dinámico y determinado por la física permite vivir colisiones realistas y nuevas animaciones en ambos lados del campo.</p>
+          <p>
+            Golpea con todas tus fuerzas con FieldSENSE™ y BOOM Tech. Disfruta
+            del modo en que el nuevo sistema de placajes dinámico y determinado
+            por la física permite vivir colisiones realistas y nuevas
+            animaciones en ambos lados del campo.
+          </p>
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://i.ytimg.com/vi/5vwFZodh-2I/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAdRmXnsgU3NzquAK4xYvZ8XQuIpA" alt="Juego Deportes 3" />
+            <img
+              src="https://i.ytimg.com/vi/5vwFZodh-2I/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAdRmXnsgU3NzquAK4xYvZ8XQuIpA"
+              alt="Juego Deportes 3"
+            />
           </div>
           <h3>MLB Rivals</h3>
-          <p>¡Competición contra los rivles en la Major League! ¡La siguiente generación del juego de MLB con una experiencia elevada! MLB RIVALS.</p>
+          <p>
+            ¡Competición contra los rivles en la Major League! ¡La siguiente
+            generación del juego de MLB con una experiencia elevada! MLB RIVALS.
+          </p>
           <p><em>(PC)</em></p>
         </div>
       </div>
