--- a/lucha.html
+++ b/lucha.html
@@ -10,7 +10,10 @@
       <a href="index.html">
         <div class="logo">
           <h1>Checkpoint</h1>
-          <img src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png" alt="logo" />
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png"
+            alt="logo"
+          />
         </div>
       </a>
       <nav class="nav-menu">
@@ -23,40 +26,61 @@
     </header>
 
     <main class="main-content">
+      <h2 class="categorias">Lucha</h2>
+
       <!-- Descripción centrada para Lucha -->
       <section class="category-description">
         <p>
-          En la categoría <strong>Lucha</strong> encontrarás juegos de combate cuerpo a cuerpo, donde la técnica y el timing son esenciales para dominar a tus oponentes en duelos llenos de acción.
+          En la categoría <strong>Lucha</strong> encontrarás juegos de combate
+          cuerpo a cuerpo, donde la técnica y el timing son esenciales para
+          dominar a tus oponentes en duelos llenos de acción.
         </p>
       </section>
 
-      <h2 class="categorias" style="text-align:center;">Lucha</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://juegosdigitaleschile.com/files/images/productos/1695144179-mortal-kombat-1-ps5-0.jpg" alt="Juego Lucha 1" />
+            <img
+              src="https://juegosdigitaleschile.com/files/images/productos/1695144179-mortal-kombat-1-ps5-0.jpg"
+              alt="Juego Lucha 1"
+            />
           </div>
           <h3>Mortal Kombat 1</h3>
-          <p>Es la duodécima entrega principal de la serie Mortal Kombat y una secuela de Mortal Kombat 11.</p>
+          <p>
+            Es la duodécima entrega principal de la serie Mortal Kombat y una
+            secuela de Mortal Kombat 11.
+          </p>
           <p><em>(PS5)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://juegosdigitaleschile.com/files/images/productos/1720894834-dragon-ball-fighterz-legendary-edition-ps5-0.webp" alt="Juego Lucha 2" />
+            <img
+              src="https://juegosdigitaleschile.com/files/images/productos/1720894834-dragon-ball-fighterz-legendary-edition-ps5-0.webp"
+              alt="Juego Lucha 2"
+            />
           </div>
           <h3>Dragon Ball Fighterz Legendary edition</h3>
-          <p>DRAGON BALL FighterZ nace de lo que hace a DRAGON BALL tan famosa: luchas espectaculares e interminables con luchadores superpoderosos.</p>
+          <p>
+            DRAGON BALL FighterZ nace de lo que hace a DRAGON BALL tan famosa:
+            luchas espectaculares e interminables con luchadores superpoderosos.
+          </p>
           <p><em>(PS5)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202212/1621/rCvLik1PKDSoCaEvTIx42H3Q.png" alt="Juego Lucha 3" />
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202212/1621/rCvLik1PKDSoCaEvTIx42H3Q.png"
+              alt="Juego Lucha 3"
+            />
           </div>
           <h3>Tekken 8</h3>
-          <p>TEKKEN 8 continúa la trágica saga de los linajes Mishima y Kazama y sus enfrentamientos rencorosos entre padre e hijo.</p>
+          <p>
+            TEKKEN 8 continúa la trágica saga de los linajes Mishima y Kazama y
+            sus enfrentamientos rencorosos entre padre e hijo.
+          </p>
           <p><em>(PS5)</em></p>
         </div>
       </div>
