--- a/rpg.html
+++ b/rpg.html
@@ -10,7 +10,10 @@
       <a href="index.html">
         <div class="logo">
           <h1>Checkpoint</h1>
-          <img src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png" alt="logo" />
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png"
+            alt="logo"
+          />
         </div>
       </a>
       <nav class="nav-menu">
@@ -23,40 +26,65 @@
     </header>
 
     <main class="main-content">
+      <h2 class="categorias">RPG</h2>
+
       <!-- Descripción centrada para RPG -->
       <section class="category-description">
         <p>
-          En la categoría <strong>RPG</strong> encontrarás juegos que te sumergen en mundos épicos, con historias profundas, personajes complejos y aventuras donde cada decisión cuenta.
+          En la categoría <strong>RPG</strong> encontrarás juegos que te
+          sumergen en mundos épicos, con historias profundas, personajes
+          complejos y aventuras donde cada decisión cuenta.
         </p>
       </section>
 
-      <h2 class="categorias" style="text-align:center;">RPG</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202110/2000/YMUoJUYNX0xWk6eTKuZLr5Iw.jpg" alt="Juego RPG 1" />
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202110/2000/YMUoJUYNX0xWk6eTKuZLr5Iw.jpg"
+              alt="Juego RPG 1"
+            />
           </div>
           <h3>Elden Ring</h3>
-          <p>Recorre las Tierras Intermedias, un nuevo mundo de fantasía ideado por Hidetaka Miyazaki, creador de la exitosa serie de videojuegos DARK SOULS, y por George R. R. Martin, autor de Canción de hielo y fuego.</p>
+          <p>
+            Recorre las Tierras Intermedias, un nuevo mundo de fantasía ideado
+            por Hidetaka Miyazaki, creador de la exitosa serie de videojuegos
+            DARK SOULS, y por George R. R. Martin, autor de Canción de hielo y
+            fuego.
+          </p>
           <p><em>(PS4)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000043147/684bd8b00abcbf6dd122727a27c01a337f667bef825f4f4662efad9854b72fd4" alt="Juego RPG 2" />
+            <img
+              src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000043147/684bd8b00abcbf6dd122727a27c01a337f667bef825f4f4662efad9854b72fd4"
+              alt="Juego RPG 2"
+            />
           </div>
           <h3>Persona 5 Royal</h3>
-          <p>Persona 5 es un juego de rol donde el jugador asume el papel de un estudiante de secundaria a lo largo de todo un año en el que asiste a la escuela secundaria en Tokio.</p>
+          <p>
+            Persona 5 es un juego de rol donde el jugador asume el papel de un
+            estudiante de secundaria a lo largo de todo un año en el que asiste
+            a la escuela secundaria en Tokio.
+          </p>
           <p><em>(PS4-PS5)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000001369/3a41386d4b0999365727a21cc5c13853cfc244abca39b689bb79a339601e48c3" alt="Juego RPG 3" />
+            <img
+              src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000001369/3a41386d4b0999365727a21cc5c13853cfc244abca39b689bb79a339601e48c3"
+              alt="Juego RPG 3"
+            />
           </div>
           <h3>The Elder Scrolls V: Skyrim</h3>
-          <p>The Elder Scrolls V: Skyrim es un videojuego de rol de acción de mundo abierto desarrollado por Bethesda Game Studios y publicado por Bethesda Softworks..</p>
+          <p>
+            The Elder Scrolls V: Skyrim es un videojuego de rol de acción de
+            mundo abierto desarrollado por Bethesda Game Studios y publicado por
+            Bethesda Softworks..
+          </p>
           <p><em>(pc)</em></p>
         </div>
       </div>
