--- a/shooters.html
+++ b/shooters.html
@@ -10,7 +10,10 @@
       <a href="index.html">
         <div class="logo">
           <h1>Checkpoint</h1>
-          <img src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png" alt="logo" />
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png"
+            alt="logo"
+          />
         </div>
       </a>
       <nav class="nav-menu">
@@ -23,40 +26,65 @@
     </header>
 
     <main class="main-content">
+      <h2 class="categorias">Shooters</h2>
+
       <!-- Descripción centrada para Shooters -->
       <section class="category-description">
         <p>
-          En la categoría <strong>Shooters</strong> encontrarás juegos de disparos en primera o tercera persona, con acción intensa, gráficos impresionantes y escenarios inmersivos que te mantendrán al filo de la emoción.
+          En la categoría <strong>Shooters</strong> encontrarás juegos de
+          disparos en primera o tercera persona, con acción intensa, gráficos
+          impresionantes y escenarios inmersivos que te mantendrán al filo de la
+          emoción.
         </p>
       </section>
 
-      <h2 class="categorias" style="text-align:center;">Shooters</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202210/2019/S8KTmZMvemfR8yfAqHvLpGIP.jpg" alt="Juego Shooters 1" />
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202210/2019/S8KTmZMvemfR8yfAqHvLpGIP.jpg"
+              alt="Juego Shooters 1"
+            />
           </div>
           <h3>Tom Clancy's Rainbow Six® Siege</h3>
-          <p>Tom Clancy's Rainbow Six® Siege es un shooter táctico realista por equipos donde una cuidadosa planificación y ejecución son claves para la victoria.</p>
+          <p>
+            Tom Clancy's Rainbow Six® Siege es un shooter táctico realista por
+            equipos donde una cuidadosa planificación y ejecución son claves
+            para la victoria.
+          </p>
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://cdnx.jumpseller.com/deus-digital/image/45980982/thumb/719/719?1709174376" alt="Juego Shooters 2" />
+            <img
+              src="https://cdnx.jumpseller.com/deus-digital/image/45980982/thumb/719/719?1709174376"
+              alt="Juego Shooters 2"
+            />
           </div>
           <h3>Hell Let Loose</h3>
-          <p>Únete a Hell Let Loose, un shooter bestial en primera persona ambientado en la II Guerra Mundial que incluye batallas épicas de 100 jugadores con infantería, tanques, artillería.</p>
+          <p>
+            Únete a Hell Let Loose, un shooter bestial en primera persona
+            ambientado en la II Guerra Mundial que incluye batallas épicas de
+            100 jugadores con infantería, tanques, artillería.
+          </p>
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/cdn/UP0002/CUSA03004_00/nufowBu3MX1KYbiOAbp9tyligmboXqHl.png" alt="Juego Shooters 3" />
+            <img
+              src="https://image.api.playstation.com/cdn/UP0002/CUSA03004_00/nufowBu3MX1KYbiOAbp9tyligmboXqHl.png"
+              alt="Juego Shooters 3"
+            />
           </div>
           <h3>Call of Duty®: Black Ops III</h3>
-          <p>Call of Duty® Black Ops III: Zombies Chronicles Edition incluye el juego original completo y la expansión de contenido Zombies Chronicles..</p>
+          <p>
+            Call of Duty® Black Ops III: Zombies Chronicles Edition incluye el
+            juego original completo y la expansión de contenido Zombies
+            Chronicles..
+          </p>
           <p><em>(PC)</em></p>
         </div>
       </div>
