--- a/plataformas.html
+++ b/plataformas.html
@@ -10,7 +10,10 @@
       <a href="index.html">
         <div class="logo">
           <h1>Checkpoint</h1>
-          <img src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png" alt="logo" />
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png"
+            alt="logo"
+          />
         </div>
       </a>
       <nav class="nav-menu">
@@ -23,40 +26,65 @@
     </header>
 
     <main class="main-content">
+      <h2 class="categorias">Plataformas</h2>
+
       <!-- Descripción centrada para Plataformas -->
       <section class="category-description">
         <p>
-          En la categoría <strong>Plataformas</strong> encontrarás juegos que combinan desafíos de saltos y puzzles en escenarios coloridos, poniendo a prueba tu agilidad y reflejos en cada nivel.
+          En la categoría <strong>Plataformas</strong> encontrarás juegos que
+          combinan desafíos de saltos y puzzles en escenarios coloridos,
+          poniendo a prueba tu agilidad y reflejos en cada nivel.
         </p>
       </section>
 
-      <h2 class="categorias" style="text-align:center;">Plataformas</h2>
       <div class="games-container">
         <!-- Game Card 1 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202012/0815/0Xqi1LgRoEtJ5zlFprpd54Vu.png" alt="Juego Plataformas 1" />
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202012/0815/0Xqi1LgRoEtJ5zlFprpd54Vu.png"
+              alt="Juego Plataformas 1"
+            />
           </div>
           <h3>It Takes Two</h3>
-          <p>Embárcate en la aventura de tu vida en It Takes Two. Invita a un amigo a acompañarte gratis con el Pase de amigo* para colaborar en una gran variedad de desafíos deliciosamente rompedores.</p>
+          <p>
+            Embárcate en la aventura de tu vida en It Takes Two. Invita a un
+            amigo a acompañarte gratis con el Pase de amigo* para colaborar en
+            una gran variedad de desafíos deliciosamente rompedores.
+          </p>
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000021688/f01ac33f78852331a7cc0c41561119b225bb8ac9e359179e912fb636bd07b05e" alt="Juego Plataformas 2" />
+            <img
+              src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000021688/f01ac33f78852331a7cc0c41561119b225bb8ac9e359179e912fb636bd07b05e"
+              alt="Juego Plataformas 2"
+            />
           </div>
           <h3>Little Nightmares II</h3>
-          <p>Little Nightmares II es un juego de aventura y suspense en el que eres Mono, un joven atrapado en un mundo distorsionado por una malvada transmisión. Junto a su nueva amiga Six, Mono se dispone a descubrir de dónde viene esa transmisión.</p>
+          <p>
+            Little Nightmares II es un juego de aventura y suspense en el que
+            eres Mono, un joven atrapado en un mundo distorsionado por una
+            malvada transmisión. Junto a su nueva amiga Six, Mono se dispone a
+            descubrir de dónde viene esa transmisión.
+          </p>
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
         <div class="game-card">
           <div class="image-wrapper">
-            <img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000034725/cf74916275780188fd850512efe6c678318d7317bf987599205d2a3fc76dbd79" alt="Juego Plataformas 3" />
+            <img
+              src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000034725/cf74916275780188fd850512efe6c678318d7317bf987599205d2a3fc76dbd79"
+              alt="Juego Plataformas 3"
+            />
           </div>
           <h3>Ori and the Will of the Wisps</h3>
-          <p>Comienza un nuevo viaje por un mundo enorme y exótico en el que encontrarás imponentes enemigos y puzles desafiantes en tu misión para desentrañar el destino de Ori.</p>
+          <p>
+            Comienza un nuevo viaje por un mundo enorme y exótico en el que
+            encontrarás imponentes enemigos y puzles desafiantes en tu misión
+            para desentrañar el destino de Ori.
+          </p>
           <p><em>(PC)</em></p>
         </div>
       </div>
