--- a/deportes.html
+++ b/deportes.html
@@ -2,30 +2,45 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Checkpoint - Deportes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Checkpoint - Inicio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="header">
-      <a href="index.html">
-        <div class="logo">
-          <h1>Checkpoint</h1>
+    <header class="bg-dark py-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <a
+          href="index.html"
+          class="text-white text-decoration-none d-flex align-items-center"
+        >
+          <h1 class="m-0 me-2">Checkpoint</h1>
           <img
             src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png"
             alt="logo"
+            width="40"
           />
-        </div>
-      </a>
-      <nav class="nav-menu">
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="index.html">Categorías</a></li>
-          <li><a href="#">Contacto</a></li>
-        </ul>
-      </nav>
+        </a>
+        <nav>
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Registrarse</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <main class="main-content">
+    <main class="main-content container">
       <h2 class="categorias">Deportes</h2>
       <section class="category-description">
         <p>
@@ -35,9 +50,9 @@
         </p>
       </section>
 
-      <div class="games-container">
+      <div class="row gap-4 justify-content-center">
         <!-- Game Card 1 -->
-        <div class="game-card">
+        <div class="game-card col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrapper">
             <img
               src="https://image.api.playstation.com/vulcan/ap/rnd/202408/0817/4248a0d1a669210e5caf5174eda176c7883be2c9089fa106.png"
@@ -53,7 +68,7 @@
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 2 -->
-        <div class="game-card">
+        <div class="game-card col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrapper">
             <img
               src="https://image.api.playstation.com/vulcan/ap/rnd/202406/1813/48a01e34bf8d665453e34e33dee2b7afc00e6c80fce939a6.jpg"
@@ -70,7 +85,7 @@
           <p><em>(PC)</em></p>
         </div>
         <!-- Game Card 3 -->
-        <div class="game-card">
+        <div class="game-card col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrapper">
             <img
               src="https://i.ytimg.com/vi/5vwFZodh-2I/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAdRmXnsgU3NzquAK4xYvZ8XQuIpA"
@@ -90,5 +105,6 @@
     <footer class="footer">
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
