--- a/lucha.html
+++ b/lucha.html
@@ -30,10 +30,10 @@
               <a class="nav-link text-white" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Categorías</a>
+              <a class="nav-link text-white" href="index.html">Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Registrarse</a>
+              <a class="nav-link text-white" href="formulario.html">Registrarse</a>
             </li>
           </ul>
         </nav>
