--- a/formulario.html
+++ b/formulario.html
@@ -124,8 +124,8 @@
         </div>
 
         <div class="d-flex justify-content-between">
-          <button type="submit" class="btn btn-primary">Enviar</button>
-          <button type="reset" class="btn btn-danger">Limpiar</button>
+          <button type="submit" class="btn btn-primary">Guardar</button>
+          <button type="reset" class="btn btn-danger">Cancelar</button>
         </div>
       </form>
     </div>
