--- a/login.html
+++ b/login.html
@@ -3,54 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Iniciar Sesión</title>
+    <title>Checkpoint - Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-color: #212529; /* Fondo oscuro */
-            color: white; /* Texto en blanco */
-        }
-        .card {
-            background-color: #343a40; /* Color oscuro del formulario */
-            color: white;
-            border-radius: 10px;
-        }
-        .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #004085;
-        }
-        input.form-control {
-            background-color: #495057;
-            color: white;
-            border: 1px solid #6c757d;
-        }
-        input.form-control:focus {
-            background-color: #495057;
-            color: white;
-            border: 1px solid #007bff;
-        }
-    </style>
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100">
-    <div class="card p-4 shadow-lg">
-        <h2 class="text-center mb-3">Iniciar Sesión</h2>
-        <form id="login-form">
-            <div class="mb-3">
-                <label for="username" class="form-label">Nombre de usuario</label>
-                <input type="text" class="form-control" id="username" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-        </form>
-    </div>
+<body class="bg-dark text-white d-flex flex-column min-vh-100">
+
+    <!-- HEADER OSCURO -->
+    <header class="bg-dark py-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a href="index.html" class="text-white text-decoration-none d-flex align-items-center">
+                <h1 class="m-0 me-2">Checkpoint</h1>
+                <img src="https://cdn-icons-png.flaticon.com/512/5188/5188014.png" alt="logo" width="40">
+            </a>
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html">Categorías</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="formulario.html">Registrarse</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="login-link" class="nav-link text-white" href="login.html">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <button id="logout-btn" class="btn btn-danger" style="display: none;">Cerrar Sesión</button>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- FORMULARIO CON TEMA OSCURO -->
+    <main class="flex-grow-1 d-flex justify-content-center align-items-center">
+        <div class="card bg-secondary text-white p-4 shadow-lg border-light" style="min-width: 300px;">
+            <h2 class="text-center mb-3">Iniciar Sesión</h2>
+            <form id="login-form">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Nombre de usuario</label>
+                    <input type="text" class="form-control bg-dark text-white border-light" id="username" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control bg-dark text-white border-light" id="password" required>
+                </div>
+                <button type="submit" class="btn btn-light w-100">Ingresar</button>
+            </form>
+        </div>
+    </main>
+
+    <!-- FOOTER OSCURO -->
+    <footer class="footer bg-dark text-white text-center py-3 mt-auto">
+        <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
+    </footer>
+
     <script src="login.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let username = localStorage.getItem("usuarioActual");
+            let loginLink = document.getElementById("login-link");
+            let logoutBtn = document.getElementById("logout-btn");
+
+            if (username) {
+                loginLink.textContent = username;
+                loginLink.href = "#";
+                logoutBtn.style.display = "inline-block";
+            } else {
+                loginLink.textContent = "Iniciar Sesión";
+                loginLink.href = "login.html";
+            }
+
+            logoutBtn.addEventListener("click", function () {
+                localStorage.removeItem("usuarioActual");
+                window.location.href = "index.html";
+            });
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
