--- a/accion.html
+++ b/accion.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="bg-dark py-3">
@@ -33,7 +33,23 @@
               <a class="nav-link text-white" href="index.html">Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="formulario.html">Registrarse</a>
+              <a class="nav-link text-white" href="formulario.html"
+                >Registrarse</a
+              >
+            </li>
+            <li class="nav-item">
+              <a id="login-link" class="nav-link text-white" href="login.html"
+                >Iniciar Sesión</a
+              >
+            </li>
+            <li class="nav-item">
+              <button
+                id="logout-btn"
+                class="btn btn-danger"
+                style="display: none"
+              >
+                Cerrar Sesión
+              </button>
             </li>
           </ul>
         </nav>
@@ -109,6 +125,7 @@
     <footer class="footer">
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
+    <script src="js/sesion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
