--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="bg-dark py-3">
@@ -36,6 +36,20 @@
               <a class="nav-link text-white" href="formulario.html"
                 >Registrarse</a
               >
+            </li>
+            <li class="nav-item">
+              <a id="login-link" class="nav-link text-white" href="login.html"
+                >Iniciar Sesión</a
+              >
+            </li>
+            <li class="nav-item">
+              <button
+                id="logout-btn"
+                class="btn btn-danger"
+                style="display: none"
+              >
+                Cerrar Sesión
+              </button>
             </li>
           </ul>
         </nav>
@@ -134,6 +148,7 @@
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="formulario.js"></script>
+    <script src="js/formulario.js"></script>
+    <script src="js/sesion.js"></script>
   </body>
 </html>
