--- a/login.html
+++ b/login.html
@@ -83,6 +83,9 @@
           </div>
           <button type="submit" class="btn btn-light w-100">Ingresar</button>
         </form>
+        <div class="text-center mt-3">
+          <a href="recuperar.html" class="btn btn-outline-light btn-sm">¿Olvidaste tu contraseña?</a>
+        </div>
       </div>
     </main>
 
