--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@
     </footer>
 
     <script src="js/sesion.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const loginLink = document.getElementById("login-link");
+        const logoutBtn = document.getElementById("logout-btn");
+
+        let usuarioActual = localStorage.getItem("usuarioActual");
+        if (usuarioActual) {
+          loginLink.textContent = usuarioActual;
+          loginLink.href = "ver_perfil.html"; // ← redirige al perfil
+          logoutBtn.style.display = "inline-block";
+        }
+
+        if (logoutBtn) {
+          logoutBtn.addEventListener("click", function () {
+            localStorage.removeItem("usuarioActual");
+            window.location.href = "index.html";
+          });
+        }
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
