--- a/deportes.html
+++ b/deportes.html
@@ -29,11 +29,27 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="index.html">Inicio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="index.html">Categorías</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link text-white dropdown-toggle" href="#" id="categorias-btn" role="button">
+                Categorías
+              </a>
+              <ul class="dropdown-menu" id="categorias-lista">
+                <li><a class="dropdown-item" href="accion.html">Acción</a></li>
+                <li><a class="dropdown-item" href="rpg.html">RPG</a></li>
+                <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
+                <li><a class="dropdown-item" href="lucha.html">Lucha</a></li>
+                <li><a class="dropdown-item" href="shooters.html">Shooters</a></li>
+                <li><a class="dropdown-item" href="plataformas.html">Plataformas</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="formulario.html">Registrarse</a>
+            </li>
+            <li class="nav-item">
+              <a id="login-link" class="nav-link text-white" href="login.html">Iniciar Sesión</a>
+            </li>
+            <li class="nav-item">
+              <button id="logout-btn" class="btn btn-danger" style="display: none">Cerrar Sesión</button>
             </li>
           </ul>
         </nav>
@@ -106,6 +122,7 @@
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
     <script src="js/sesion.js"></script>
+    <script src="js/listar_categorias.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
